0032866: Visualization, TKOpenGles - FitAll() is broken when performance counters are displayed

OpenGl_View::MinMaxValues() - added missing theToIncludeAuxiliary check.